--- a/views/contact/edit.ejs
+++ b/views/contact/edit.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/header.ejs %>
 
+<!-- Content for Edit Page -->
 <div class="container">
   <div class="row">
     <div class="col-md-offset-3 col-md-6">
@@ -14,6 +15,7 @@
             id="FirstNameTextField"
             placeholder="Enter First Name"
             name="firstName"
+            value ="<%= contact.firstName %>"
             required
           />
         </div>
@@ -25,6 +27,8 @@
             class="form-control"
             id="LastNameTextField"
             placeholder="Enter Last Name"
+           value ="<%= contact.lastName %>"
+
             name="lastName"
             required
           />
@@ -37,6 +41,7 @@
             class="form-control"
             id="ageTextField"
             placeholder="Enter Age "
+           value ="<%= contact.age %>"
             name="age"
             required
           />
