--- a/views/contact/index.ejs
+++ b/views/contact/index.ejs
@@ -15,6 +15,8 @@
             <th scope="col">First</th>
             <th scope="col">Last</th>
             <th scope="col">Age</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
           </tr>
         </thead>
 
@@ -26,6 +28,23 @@
             <td><%= givenValues[count].firstName %></td>
             <td><%= givenValues[count].lastName %></td>
             <td><%= givenValues[count].age %></td>
+            <td class="text-center">
+              <a
+                href="/contact-list/edit/<%= givenValues[count]._id %>"
+                class="btn btn-primary"
+              >
+                <i class="fa fa-pencil" aria-hidden="true"></i> Edit
+              </a>
+            </td>
+
+            <td class="text-center">
+              <a
+                href="/contact-list/delete/<%= givenValues[count]._id %>"
+                class="btn btn-danger"
+              >
+                <i class="fa fa-trash" aria-hidden="true"></i> delete
+              </a>
+            </td>
           </tr>
         </tbody>
         <% } %>
