--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -61,25 +61,15 @@
             >
           </li>
 
-          <% if(title == "Services") { %>
-          <li class="nav-item active"><% } else { %></li>
-
-          <li class="nav-item">
-            <% } %>
-
-            <a class="nav-link" href="/services"
-              ><i class="fa fa-lg fa-birthday-cake"></i> Services</a
-            >
-          </li>
-
-          <% if(title == "Contact") { %>
+         
+          <% if(title == "Model") { %>
           <li class="nav-item active"><% } else { %></li>
 
           <li class="nav-item">
             <% } %>
 
             <a class="nav-link" href="/contact"
-              ><i class="fa fa-lg fa-phone"></i> Contact</a
+              ><i class="fa fa-lg fa-phone"></i> Design</a
             >
           </li>
         </ul>
