--- a/views/contact/index.ejs
+++ b/views/contact/index.ejs
@@ -25,9 +25,7 @@
         <tbody>
           <tr>
             <th scope="row"><%= count + 1%></th>
-            <td><%= givenValues[count].firstName %></td>
-            <td><%= givenValues[count].lastName %></td>
-            <td><%= givenValues[count].age %></td>
+            <td><%= givenValues[count].name %></td>
             <td class="text-center">
               <a
                 href="/contact-list/edit/<%= givenValues[count]._id %>"
