--- a/views/contact/add.ejs
+++ b/views/contact/add.ejs
@@ -7,39 +7,18 @@
 
       <form class="form" method="POST">
         <div class="form-group">
-          <label for="firstNameTextField">First Name</label
+          <label for="firstNameTextField">name</label
           ><input
             type="text"
             class="form-control"
-            id="FirstNameTextField"
+            id="name"
             placeholder="Enter First Name"
-            name="firstName"
+            name="name"
             required
           />
         </div>
 
-        <div class="form-group">
-          <label for="lasttNameTextField">Last Name</label
-          ><input
-            type="text"
-            class="form-control"
-            id="LastNameTextField"
-            placeholder="Enter Last Name"
-            name="lastName"
-            required
-          />
-        </div>
-
-        <div class="form-group">
-          <label for="ageTextField">Age</label
-          ><input
-            type="text"
-            class="form-control"
-            id="ageTextField"
-            placeholder="Enter Age "
-            name="age"
-            required
-          />
+      
         </div>
         <button type="submit" class="btn btn-primary">
           <i class="fa fa-edit    "></i>
