--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,11 @@
       <div class="jumbotron">
         <h1 class="display-4">Welcome to <%= title %></h1>
         <% if (title == "Contact"){ %>
-    <a type="button" class="btn btn-primary" href="./contact-list" role ="button" >Contact List</button>
+    <a type="button" class="btn btn-primary" href="./health-list" role ="button" >Contact List</button>
 
       <%  } %>
+
+        
 
        </div>
     </div>
