--- a/views/analyze/add.ejs
+++ b/views/analyze/add.ejs
@@ -4,20 +4,8 @@
   <div class="row">
     <div class="col-md-offset-3 col-md-6">
       <h1><%= title %></h1>
-
-      <form class="form" method="POST">
-        <div class="form-group">
-          <label for="caregiver">Care Giver</label
-          ><input
-            type="text"
-            class="form-control"
-            id="caregiverTextField"
-            name="caregiver"
-            required
-          />
-        </div>
-
-        <div class="form-group">
+     
+      <div class="form-group">
           <label for="patient">Patient</label
           ><input
             type="text"
@@ -28,50 +16,98 @@
           />
         </div>
 
+      <form class="form" method="POST">
         <div class="form-group">
-          <label for="behaviour">behaviour</label
+          <label for="caregiver">CareGiver</label
           ><input
             type="text"
             class="form-control"
-            id="behaviourTXT"
-            name="behaviour"
-            required
-          />
-        </div>
-
-        <div class="form-group">
-          <label for="interventiondone">interventiondone</label
-          ><input
-            type="text"
-            class="form-control"
-            id="interventiondoneTXT"
-            name="interventiondone"
-            required
-          />
-        </div>
-
-        <div class="form-group">
-          <label for="behaviour">dateandtime</label
-          ><input
-            type="text"
-            class="form-control"
-            id="dateandtimeTXT"
-            name="dateandtime"
+            id="caregiverTextField"
+            name="caregiver"
             required
           />
         </div>
 
 
-        <div class="form-group">
-          <label for="location">location</label
+      <div class="form-group">
+          <label for="typeOfCare">typeOfCare</label
           ><input
             type="text"
             class="form-control"
-            id="locationTXT"
-            name="location"
+            id="typeOfCareTXT"
+            name="typeOfCare"
             required
           />
         </div>
+'
+
+        <div class="form-group">
+          <label for="typeOfAbuse">typeOfAbuse</label
+          ><input
+            type="text"
+            class="form-control"
+            id="typeOfAbuseTXT"
+            name="typeOfAbuse"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="interventiondone">is Agressive</label
+          ><input
+            type="text"
+            class="form-control"
+            id="isAgressiveTXT"
+            name="isAgressive"
+            required
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="behaviour">Recommended Phrases</label
+          ><input
+            type="text"
+            class="form-control"
+            id="recommendedPhrases"
+            name="recommendedPhrases"
+            required
+          />
+        </div>
+
+
+        <div class="form-group">
+          <label for="location">personalRedirection</label
+          ><input
+            type="text"
+            class="form-control"
+            id="personalRedirectionTXT"
+            name="personalRedirection"
+            required
+          />
+        </div>
+
+
+         <div class="form-group">
+          <label for="location">successRating</label
+          ><input
+            type="text"
+            class="form-control"
+            id="successRatingTXT"
+            name="successRating"
+            required
+          />
+        </div>
+           <div class="form-group">
+          <label for="location">dateTime</label
+          ><input
+            type="text"
+            class="form-control"
+            id="dateTimeTXT"
+            name="dateTime"
+            required
+          />
+        </div>
+
 
 
         <div class="form-group">
