--- a/views/analyze/index.ejs
+++ b/views/analyze/index.ejs
@@ -4,20 +4,21 @@
   <div class="row">
     <div class="col-md-offset-3 col-md-6">
       <h1><%= title %></h1>
-      <a class="btn btn-primary" href="/health-list/add" role="button">
-        <i class="fa fa-plus-circle"> Add a Contact </i>
+      <a class="btn btn-primary" href="/incoming-list/add" role="button">
+        <i class="fa fa-plus-circle">ANALYZE PATIENT </i>
       </a>
 
       <table class="table">
         <thead class="thead-light">
           <tr>
             <th scope="col">#</th>
-            <th scope="col">caregiver</th>
-            <th scope="col">patient</th>
+            <th scope="col">recommendedPhrases</th>
+            <th scope="col">personalRedirection</th>
+                        <th scope="col">patientID</th>
+
             <th scope="col">behaviour</th>
-                <th scope="col">dateandtime</th>
-            <th scope="col">location</th>
-            <th scope="col">comments</th>
+                                    <th scope="col">score</th>
+                        
           
           </tr>
         </thead>
@@ -27,15 +28,19 @@
         <tbody>
           <tr>
             <th scope="row"><%= count + 1%></th>
-            <td><%= givenValues[count].caregiver %></td>
-            <td><%= givenValues[count].patient %></td>
+            <td><%= givenValues[count].recomenndedPhrases%></td>
+            <td><%= givenValues[count].personalRedirection %></td>
+                        <td><%= givenValues[count].patientID %></td>
+
             <td><%= givenValues[count].behaviour %></td>
-             <td><%= givenValues[count].dateandtime %></td>
-            <td><%= givenValues[count].locations %></td>
+             <td><%= givenValues[count].score %></td>
+           
+
+
             <td><%= givenValues[count].comments %></td>
             <td class="text-center">
               <a
-                href="/health-list/edit/<%= givenValues[count]._id %>"
+                href="/incoming-list/edit/<%= givenValues[count]._id %>"
                 class="btn btn-primary"
               >
                 <i class="fa fa-pencil" aria-hidden="true"></i> Edit
@@ -44,7 +49,7 @@
 
             <td class="text-center">
               <a
-                href="/health-list/delete/<%= givenValues[count]._id %>"
+                href="/incoming-list/delete/<%= givenValues[count]._id %>"
                 class="btn btn-danger"
               >
                 <i class="fa fa-trash" aria-hidden="true"></i> delete
